# chess_game

./: Cargo.toml
chess/: Cargo.toml
chess/src/: app.rs  game.rs  lib.rs
chess/src/game/: board_renderer.rs  piece_registry.rs
config/: chess_config.json
src/: app.rs  game.rs  lib.rs  main.rs
src/game/: board_renderer.rs  chess_board.rs  grid.rs  piece_registry.rs  selection.rs
