[package]
name = "chess_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "entrypoint"
path = "src/main.rs"

[dependencies]
pollster = "0.3.0"
anyhow = "1.0.86"
winit = "0.30.5"
vello = "0.2.1"
vello_svg = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
winit = { version = "0.30.5", features = ["android-native-activity"] }

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]
target_sdk_version = 29
min_sdk_version = 23