[package]
name = "chess_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pollster = "0.4.0"
anyhow = "1.0.86"
winit = "0.30.5"
vello = "0.3.0"
vello_svg = { path = "../vello_svg" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
winit = { version = "0.30.5", features = ["android-native-activity"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.5"

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]
target_sdk_version = 29
min_sdk_version = 23